# greentic-i18n

./: Cargo.toml  README.md  publish.sh
.github/workflows/: publish.yml
.i18n/: translator-state.json
crates/greentic-i18n/: Cargo.toml
crates/greentic-i18n-translator/: Cargo.toml
crates/greentic-i18n-translator/src/: cli.rs
docs/: cli-i18n-codex-playbook.md  i18n-translator.md
