[workspace]
resolver = "3"
members = [
    "crates/greentic-i18n-lib",
    "crates/greentic-i18n",
    "crates/greentic-i18n-translator",
]

[workspace.package]
version = "0.4.2"
edition = "2024"


[workspace.dependencies]
assert_cmd = "2"
serde_json = "1"
serde = "1"
blake3 = "1"
data-encoding = "2"
clap = "4"
