[package]
name = "greentic-i18n-translator"
version.workspace = true
edition.workspace = true
autobins = false
license = "MIT"
description = "CLI tooling for i18n translation workflows."
repository = "https://github.com/greenticai-org/greentic-i18n"
homepage = "https://github.com/greenticai-org/greentic-i18n"
documentation = "https://docs.rs/greentic-i18n-translator"
keywords = ["cli", "i18n", "translation", "greentic"]
readme = "../../README.md"

[[bin]]
name = "greentic-i18n-translator"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
blake3 = { workspace = true }

