[package]
name = "greentic-i18n"
version.workspace = true
edition.workspace = true
autobins = false
license = "MIT"
description = "CLI entry point for Greentic i18n resolution and formatting."
repository = "https://github.com/greentic-ng/greentic-i18n"
homepage = "https://github.com/greentic-ng/greentic-i18n"
documentation = "https://docs.rs/greentic-i18n"
keywords = ["cli", "i18n", "greentic"]
readme = "../../README.md"

[dependencies]
greentic-i18n-lib = { path = "../greentic-i18n-lib", version = "0.4.1" }
greentic-i18n-translator = { path = "../greentic-i18n-translator", version = "0.4.1" }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }

[[bin]]
name = "greentic-i18n"
path = "src/main.rs"

[[bin]]
name = "greentic-i18n-translator"
path = "src/bin/greentic-i18n-translator.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/greentic-i18n-v{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
